# scrutiny

./: .clang-format  .dockerignore  .gitmodules  .ocamlformat  README.md  dune  dune-project  flake.nix  scrutiny.opam  scrutiny.opam.template  sync-tunnel.sh
examples/: cloudflare.ml  dns.ml  dune  journal_tail.ml  journal_write.ml  list_units.ml
examples/nginx/: dune  main.ml  nginx.conf  openresty.service
src/c_config/: dune  make.ml
src/cloudflare/: api_dns_record.ml  api_zone.ml  dns_sync.ml  dune  request.ml  request.mli  scrutiny_cloudflare.ml  scrutiny_cloudflare.mli  util.ml
src/diff/: dune  scrutiny_diff.ml  scrutiny_diff.mli  str_diff.ml  str_diff.mli
src/dns/: dns_sync.ml  dune  porkbun.ml  porkbun.mli  request.ml  request.mli  scrutiny_dns.ml  scrutiny_dns.mli  types.ml  util.ml
src/errno/: dune  generate.c
src/infrastructure/: cli.ml  cli.mli  core.ml  dune  executor.ml  executor.mli  executors.ml  executors.mli  het_map.ml  het_map.mli  or_exn.ml  runner.ml  runner.mli  scrutiny_infrastructure.ml  scrutiny_infrastructure.mli  tunnel.ml  tunnel.mli  types.ml  types.mli
src/infrastructure/resources/: cloudflare_resource.ml  cloudflare_resource.mli  directory_resource.ml  directory_resource.mli  dns_resource.ml  dns_resource.mli  dune  file_mod.ml  file_resource.ml  file_resource.mli  lwt_log_adapter.ml  lwt_log_adapter.mli  more_lets.ml  path_support.ml  scrutiny_infrastructure_resources.ml  scrutiny_infrastructure_resources.mli  service_resource.ml  service_resource.mli  user.ml  user.mli
src/prometheus/: README.md  dune  scrutiny_prometheus.ml  scrutiny_prometheus.mli  scrutiny_prometheus_httpaf.ml  scrutiny_prometheus_httpaf.mli
src/rpc/: dune  json_rpc.ml  json_rpc.mli  scrutiny_rpc.ml  scrutiny_rpc.mli
src/systemd/: dune  ffi_bindings.ml  ffi_generate.ml  journal.ml  journal.mli  manager.ml  manager.mli  scrutiny_systemd.ml  scrutiny_systemd.mli  systemd.obus  systemd_stubs.c
src/systemd_exporter/: cgroups.ml  dune  metrics.ml  metrics.mli  systemd_exporter.ml  systemd_exporter.mli
test/: dune  import.ml  mdx_support.ml  mdx_support.mli  t_curl_eio.md  t_scrutiny_diff.md  t_scrutiny_infrastructure.ml  t_scrutiny_rpc.md  test.ml
test/files/: sleep@.service
test/support/: Dockerfile  podman-exec.sh  t.mli
