(executable
 (name cloudflare)
 (modules cloudflare)
 (libraries
  fmt.tty
  logs
  logs.fmt
  lwt
  lwt.unix
  scrutiny.cloudflare
  scrutiny.diff))

(executable
 (name journal_tail)
 (modules journal_tail)
 (libraries scrutiny.systemd))

(executable
 (name journal_write)
 (modules journal_write)
 (libraries scrutiny.systemd))

(executable
 (name list_units)
 (modules list_units)
 (libraries containers lwt lwt.unix scrutiny.systemd))
