(executable
 (name dns)
 (modules dns)
 (libraries
  eio
  eio_main
  eio.core
  fmt.tty
  logs
  logs.fmt
  lwt
  lwt_eio
  lwt.unix
  scrutiny.diff
  scrutiny.dns))

(executable
 (name journal_tail)
 (modules journal_tail)
 (libraries scrutiny.systemd))

(executable
 (name journal_write)
 (modules journal_write)
 (libraries scrutiny.systemd))

(executable
 (name list_units)
 (modules list_units)
 (libraries containers lwt lwt.unix scrutiny.systemd))
