(executable
 (name dns)
 (modules dns)
 (libraries
  eio
  eio_main
  eio.core
  fmt.tty
  logs
  logs.fmt
  scrutiny.diff
  scrutiny.dns))

(executable
 (name journal_tail)
 (modules journal_tail)
 (libraries eio eio.core eio_main scrutiny.systemd unix))

(executable
 (name journal_write)
 (modules journal_write)
 (libraries scrutiny.systemd))

(executable
 (name list_units)
 (modules list_units)
 (libraries containers eio eio.core eio_main scrutiny.systemd))
