(test
 (name test)
 (libraries
  alcotest
  alcotest-lwt
  containers
  fmt
  fpath
  logs
  logs.fmt
  lwt
  lwt.unix
  eio
  eio_main
  eio.core
  lwt_eio
  scrutiny.infrastructure
  scrutiny.infrastructure.resources
  unix)
 (preprocess
  (pps lwt_ppx))
 (deps
  ../src/infrastructure/bin/tunnel.exe
  support/Dockerfile
  (source_tree files))
 (action
  (setenv
   SCRUTINY_SSH
   %{dep:support/podman-exec.sh}
   (run %{test}))))

(rule
 (action
  (copy support/t.mli t_scrutiny_infrastructure.mli)))

(mdx
 (libraries
  compiler-libs
  containers
  curl
  curl_eio
  eio
  eio_main
  eio.core
  eio.mock
  logs
  scrutiny.diff))

(rule
 (alias t_curl_eio)
 (action
  (diff t_curl_eio.md .mdx/t_curl_eio.md.corrected)))

(rule
 (alias t_scrutiny_diff)
 (action
  (diff t_scrutiny_diff.md .mdx/t_scrutiny_diff.md.corrected)))
