(test
 (name test)
 (libraries
  alcotest
  alcotest-lwt
  containers
  eio
  eio_main
  eio.core
  eio.unix
  fmt
  fpath
  logs
  logs.fmt
  lwt
  lwt_eio
  lwt.unix
  scrutiny.infrastructure
  scrutiny.infrastructure.resources
  unix)
 (modules
  (:standard \ mdx_support))
 (preprocess
  (pps lwt_ppx))
 (deps
  ../src/infrastructure/bin/tunnel.exe
  support/Dockerfile
  (source_tree files))
 (action
  (setenv
   SCRUTINY_SSH
   %{dep:support/podman-exec.sh}
   (run %{test}))))

(rule
 (action
  (copy support/t.mli t_scrutiny_infrastructure.mli)))

(library
 (name mdx_support)
 (modules mdx_support)
 (libraries
  compiler-libs
  containers
  cstruct
  curl
  curl_eio
  eio
  eio_main
  eio.core
  eio.mock
  eio.unix
  logs
  scrutiny.diff
  scrutiny.rpc
  unix))

(mdx
 (libraries
  compiler-libs
  containers
  cstruct
  curl
  curl_eio
  eio
  eio_main
  eio.core
  eio.mock
  eio.unix
  logs
  scrutiny.diff
  scrutiny.rpc
  unix)
 (deps mdx_support.ml mdx_support.a)
 (preludes mdx_support.ml))

(rule
 (alias t_curl_eio)
 (action
  (diff t_curl_eio.md .mdx/t_curl_eio.md.corrected)))

(rule
 (alias t_scrutiny_diff)
 (action
  (diff t_scrutiny_diff.md .mdx/t_scrutiny_diff.md.corrected)))

(rule
 (alias t_scrutiny_rpc)
 (action
  (diff t_scrutiny_rpc.md .mdx/t_scrutiny_rpc.md.corrected)))
