(library
 (name scrutiny_dns)
 (public_name scrutiny.dns)
 (synopsis "Manage DNS records using various cloud-provider's APIs")
 (libraries
  curl
  curl.lwt
  fmt
  logs
  lwt
  lwt.unix
  ppx_yojson_conv_lib
  result
  scrutiny.diff
  unix
  uri
  yojson)
 (preprocess
  (pps ppx_yojson_conv lwt_ppx)))
