(library
 (name scrutiny_errno)
 (public_name scrutiny.errno)
 (synopsis "Mapping from integers to standard UNIX ERRNOs.")
 (flags :standard -w -11)
 (libraries unix))

(rule
 (deps generate.c)
 (target generate.exe)
 (action
  (run %{cc} -o %{target} %{deps})))

(rule
 (action
  (with-stdout-to
   scrutiny_errno.ml
   (run ./generate.exe))))
