(library
 (name scrutiny_infrastructure)
 (public_name scrutiny.infrastructure)
 (libraries
  ; Core libraries
  containers
  eio
  eio_main
  eio.core
  fmt
  fpath
  logs
  lwt
  lwt_eio
  lwt.unix
  ppx_yojson_conv_lib
  result
  scrutiny.diff
  unix
  yojson
  ; Command line
  cmdliner
  mtime
  mtime.clock.os
  progress
  terminal)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv)))
