(library
 (name scrutiny_infrastructure)
 (public_name scrutiny.infrastructure)
 (libraries
  ; Core libraries
  containers
  eio
  eio.core
  eio_main
  eio_process
  eio_unix_async
  fmt
  fpath
  logs
  lwt_eio
  ppx_yojson_conv_lib
  result
  scrutiny.diff
  scrutiny.rpc
  threads
  unix
  yojson
  ; Command line
  cmdliner
  mtime
  mtime.clock.os
  progress
  terminal)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv)))
