(library
 (name scrutiny_infrastructure)
 (public_name scrutiny.infrastructure)
 (libraries
  ; Core libraries
  containers
  eio
  eio.core
  eio_main
  eio.unix
  eio_unix_async
  fmt
  fpath
  logs
  ppx_yojson_conv_lib
  result
  scrutiny.diff
  scrutiny.rpc
  threads.posix
  unix
  yojson
  ; Command line
  cmdliner
  mtime
  mtime.clock.os
  progress
  terminal)
 (preprocess
  (pps ppx_yojson_conv)))
