(library
 (name scrutiny_infrastructure_resources_internal)
 (public_name scrutiny.infrastructure.resources_internal)
 (libraries
  containers
  digestif
  fmt
  fpath
  logs
  lwt
  lwt.unix
  result
  scrutiny.diff
  scrutiny.infrastructure
  scrutiny.systemd
  yojson
  unix)
 (modules directory_resource file_mod file_resource service_resource user)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv)))

(library
 (name scrutiny_infrastructure_resources)
 (public_name scrutiny.infrastructure.resources)
 (libraries
  fmt
  fpath
  jingoo
  lwt
  result
  scrutiny.diff
  scrutiny.dns
  scrutiny.infrastructure
  scrutiny.infrastructure.resources_internal
  unix
  yojson)
 (modules dns_resource scrutiny_infrastructure_resources)
 (preprocess
  (pps lwt_ppx)))
