(library
 (name scrutiny_infrastructure_resources_internal)
 (public_name scrutiny.infrastructure.resources_internal)
 (libraries
  containers
  digestif
  eio
  eio.core
  eio.unix
  eio_unix_async
  fmt
  fpath
  logs
  result
  scrutiny.diff
  scrutiny.infrastructure
  scrutiny.systemd
  yojson
  unix)
 (modules
  directory_resource
  file_mod
  file_resource
  service_resource
  path_support
  user)
 (preprocess
  (pps ppx_yojson_conv)))

(library
 (name scrutiny_infrastructure_resources)
 (public_name scrutiny.infrastructure.resources)
 (libraries
  eio
  eio.core
  eio.unix
  fmt
  fpath
  jingoo
  result
  scrutiny.diff
  scrutiny.dns
  scrutiny.infrastructure
  scrutiny.infrastructure.resources_internal
  unix
  yojson)
 (modules dns_resource scrutiny_infrastructure_resources))
